--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         
         <section id="contact">
-            <h2>Visit Us</h2>
+            <h2>Ahoj</h2>
             <p>Come find your perfect reading spot! Open daily from 8 AM - 8 PM.</p>
         </section>
     </main>
