--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Chapter & Cup</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Domov</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#books">Bookshelf</a></li>
