--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <section id="menu">
             <h2>Our Menu</h2>
-            <p>Handcrafted coffees, herbal teas, and light snacks.</p>
+            <p>Homemade cakes, delicious coffees and calming tea</p>
         </section>
         
         <section id="books">
