--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         <section id="events">
             <h2>Upcoming Events</h2>
-            <p>Join book clubs, poetry readings, and literary gatherings.</p>
+            <p>Enjoy our cafe with books and cats</p>
         </section>
         
         <section id="contact">
