zmena obrazok a web

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Chapter & Cup</h1>
+        <h2>Beautiful</h2>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -42,6 +43,8 @@
         <section id="books">
             <h2>The Bookshelf</h2>
             <p>Browse our collection or bring your own book to enjoy in our cozy corners.</p>
+
+            <a href="www.google.com">www.google.com</a>
         </section>
         
         <section id="events">
@@ -52,6 +55,7 @@
         <section id="contact">
             <h2>Visit Us</h2>
             <p>Come find your perfect reading spot! Open daily from 8 AM - 8 PM.</p>
+            <img src="books.jpg" alt="" width="400" height="400">
         </section>
     </main>
     
