Revert "Title and paragraph edit"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cup of stories | Enjoy coffee with your stories</title>
+    <title>Chapter & Cup | Cozy Library Café</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -37,7 +37,7 @@
         
         <section id="menu">
             <h2>Our Menu</h2>
-            <p>Homemade cakes, delicious coffees and calming tea</p>
+            <p>Handcrafted coffees, herbal teas, and light snacks.</p>
         </section>
         
         <section id="books">
